# ghost-home-assistant

./: README.md  SUBMISSION_AGENT_PROMPT.md  pyproject.toml
.github/workflows/: test.yml
custom_components/ghost/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  quality_scale.yaml  sensor.py  strings.json  webhook.py
custom_components/ghost/translations/: en.json
docs/: ghost.md
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_sensor.py  test_webhook.py
